--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc\:mysql\://127.0.0.1\:3306/springboots?useUnicode\=true&characterEncoding\=gbk&zeroDateTimeBehavior\=convertToNull  
+spring.datasource.url=jdbc\:mysql\://127.0.0.1\:3306/altas?useUnicode\=true&characterEncoding\=gbk&zeroDateTimeBehavior\=convertToNull  
 spring.datasource.username=root  
-spring.datasource.password=password
+spring.datasource.password=1206
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver  
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource    
 spring.datasource.initialSize=5    
@@ -32,3 +32,7 @@ spring.aop.proxy-target-class=true
 spring.servlet.multipart.max-file-size = 20Mb    
 spring.servlet.multipart.max-request-size=100Mb 
 
+spring.mvc.static-path-pattern=/**
+web.png-path=E:/201709_201806/ALTAS Demo/images/
+#web.png-path=/root/img/
+spring.resources.static-locations=classpath:/static/,classpath:/templates/, file:${web.png-path}
