--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,6 @@ spring.servlet.multipart.max-file-size = 20Mb
 spring.servlet.multipart.max-request-size=100Mb 
 
 spring.mvc.static-path-pattern=/**
-web.png-path=E:/201709_201806/ALTAS Demo/images/
-#web.png-path=/root/img/
+#web.png-path=E:/201709_201806/ALTAS Demo/images/
+web.png-path=/root/img/
 spring.resources.static-locations=classpath:/static/,classpath:/templates/, file:${web.png-path}
